# quant-trad

./: .coverage  .env  .env.test  .gitignore  AGENTS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  Makefile_backup  README.md  REFACTORING_SUMMARY.md  __mainv2_main.py  coverage.xml  docker-compose.yml  fetch-data.py  git_changes.txt  git_diff.patch  grid_search.py  grid_search_results.csv  main.py  package-lock.json  prometheus.yml  pyproject.toml  pytest.ini  python_imports  requirements.txt  run_backtest.py  secrets.env.example  start.sh  strategy.py  temp.py  test_bubble_time_debug.py  test_timestamp_conversion.py
classes/: ChartPlotter.py  DataLoader.py  Logger.py  OverlayHandlers.py  OverlayRegistry.py  PivotDetector.py  StockData.py  Trendline.py  TrendlineAnalyzer.py
cli/: __init__.py  api.py  audit.py  main.py  mcp_server.py
config/: defaults.yaml  dev.yaml  prod.yaml
configs/: simple_strategy.yaml
data_providers/: alpaca.py  alpaca_provider.py  base.py  base_provider.py  yahoo.py  yahoo_provider.py
docker/: docker-compose.bots.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
docs/: ARCHITECTURE_REFACTOR.md  INCREMENTAL_CACHING.md  INDICATOR_STANDARD.md  README.md  REFACTORING_COMPLETE.md  getting-started.md  index.md  indicator_plugins.md  overview.md  regime_stabilization.md  signal_registry.md
portal/: __init__.py
provisioning/: loki.yaml
scripts/: backup-grafana-dashboards.sh  cli.py  coinbase_jwt.py  dev_startup.sh  fetch-tsdb-ddl.sh  startup.sh  trade_charter.py  wait-for-db.sh
(+1390 files in other folders)
